<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/statusEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/status_hint" />

    <EditText
        android:id="@+id/notesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes_hint"
        android:inputType="textMultiLine"
        android:minLines="3"
        android:maxLines="5"
        android:gravity="top|start" />

    <Button
        android:id="@+id/saveStateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_state_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />
</LinearLayout>
