<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SensorDataActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/textViewMetrics"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textViewAverage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/average_heart_rate"
            android:textColor="#80bd80"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewStdDeviation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/std_deviation"
            android:textColor="#80bd80"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewMinHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_heart_rate"
            android:textColor="#80bd80"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewMaxHeartRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_heart_rate"
            android:textColor="#80bd80"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textViewHealthIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health_index"
            android:textColor="#80bd80"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
