<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonLayout"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/getPhysicalStateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_physical_state_button"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/addStateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_state_button"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <Button
            android:id="@+id/addPhysicalStateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_physical_state_button"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
